--- a/src/index.css
+++ b/src/index.css
@@ -12,7 +12,7 @@
 main:not(#map) {
   padding: 30px 30px 30px 0;
   max-width: 60ch;
-  margin: 0 0 0 25vw;
+  margin: 0 0 0 350px;
   line-height: 1.5;
 }
 /* center content layout on large displays */
