--- a/src/pages/MapPage/MapPage.css
+++ b/src/pages/MapPage/MapPage.css
@@ -1,5 +1,5 @@
 aside#map-control {
-  width: 300px;
+  width: 330px;
   padding: 20px 10px;
   background-color: var(--sidebar-bg);
   height: calc(100% - 64px - 40px);
